2006-07-25  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (window_theme_selection_changed),
	(gnome_theme_details_update_from_gconf): Don't attempt to load window
	manager theme name from an unknown window manager (fixes bug 333276 -
	gnome-theme-manager crashes with xgl/compiz)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gtk-theme-selector.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2006-07-14  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c:
	(transfer_done_cb): Made the installation message dialog more HIG
	compliant, as per comments from bug 167045. Also reinstated the fix
	for bug 316800.
	(gnome_theme_installer_run): Remove invalid, and also duplicate, check
	for the tar utility.

2006-06-13  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Fix Bug 167045 -
	Strange wording in gnome-control-center theme manager messages

2006-04-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (write_theme_to_disk), (save_theme_to_disk),
	(save_dialog_response):
	* theme-properties.glade:

	- Added option to save current background when saving a custom theme.
	Fixes bug 330302 - Saved themes should remember wallpaper.
	- Also implements some of the UI changes for the save dialog, suggested
	in bug 100622

2006-04-27  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (str_remove_slash),
	(setup_directory_structure):

	Fix bug 317375 - theme-manager (saving) sometimes needlessly asks
	whether to overwrite

2006-04-26  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (str_remove_slash),
	(setup_directory_structure), (write_theme_to_disk),
	(gnome_theme_save_show_dialog):

	Fix bug 139692 - Some characters cannot be given as the theme name

2006-04-25  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gnome-theme-installer.c: (gnome_theme_install_from_uri),
	(gnome_theme_installer_run_cb), (gnome_theme_installer_run):