@@ -1,3 +1,10 @@
+2006-07-27  Rob Bradford <robster@debian.org>
+
+	Fixes #346041
+
+	* gnome-theme-manager.[ch]:
+	* theme-properties.glade: added support for locking down theme.
+
 2006-07-25  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-details.c: (window_theme_selection_changed),
